--- a/style.css
+++ b/style.css
@@ -8,13 +8,17 @@ h1{
 .orange-color{
 color: orange;
 }
-section{
+h2{
+    font-size: 42px;
+}
+.flexible-container{
     display: flex;
     margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
     padding-left: 5%;
+   
 }
 .half-width img{
     width: 80%;
@@ -35,4 +39,17 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.exprience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experiences-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
 }
